src/test/error/fuck.c
int f() {
    return g();
}
int g() {
    return f();
}
int main() {
    f();
    g();
}